Checkstyle pass Stoppable/Interruptable changed to single Suspendable Substracting inner class into a file